<resources>
    <string name="app_name">Demo Online School</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="todo">TODO</string>
    <string name="email">Enter your email address</string>
    <string name="password">Enter your password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="name">Enter your full name</string>
    <string name="phone">Enter your phone number</string>
    <string name="already_registered">Already have an account? Log in</string>
    <string name="no_account">Not registered yet? Register now</string>
    <string name="register_alert_text">A verification mail will sent to the email to verify you. Please enter a valid email address.</string>
    <string name="cancel">Cancel</string>
    <string name="signup_hint">Signup</string>
    <string name="resend_email">Resend Verification Email</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="post_hint">Start typing here to share something....</string>
    <string name="post">Post</string>
    <string name="comment">Add a comment…</string>
    <string name="admin">Admin Panel</string>
    <string name="student">Student Panel</string>
    <string name="profile">User Profile</string>
    <string name="post_profile">User Posts</string>
    <string name="user_id">Please enter user id</string>
    <string name="go_to">Go To</string>
    <string name="batch_name">Batch Name</string>
    <string name="join_class_routine">Class Join Meet Link</string>
    <string name="recorded_video">Class Routine Drive Sharable Link</string>
    <string name="others_link">Others link (website url with https://www.)</string>
    <string name="create_batch">Create Batch</string>
    <string name="add_student">Add Student</string>
    <string name="coaching_id">Please enter the coaching student id here</string>
    <string name="forget_password_text">Forget your password?</string>
    <string name="change_password_text">This is a security sensitive operation for that reason you are logged in then you are automatically signed out. A password reset email will sent to your mail if you fill the email session below and press the button.\n\nWant to sign in again?</string>
    <string name="others">Others</string>
    <string name="recoeded_videos">Recoeded Videos</string>
    <string name="class_routine">Class Routine</string>
    <string name="join_live_class">Join Live Class</string>
    <string name="rotate_to_view_in_full_screen">Rotate your mobile to adjust screen size or better performance.</string>
    <string name="see_all_users">See all Users</string>
    <string name="search_all_students_by_batch_name">Search all students by Batch Name</string>
    <string name="search_by_user_id">Search by User id</string>
    <string name="enable_a_user">Enable a User</string>
    <string name="disable_a_user">Disable a User</string>
    <string name="add_a_new_batch">Add a new Batch</string>
    <string name="add_teacher">Add Teacher</string>
    <string name="make_a_user_guest">Make a User Guest</string>
    <string name="add_admin">Add Admin</string>
    <string name="add_recorded_videos">Add Recorded Videos</string>
    <string name="add_a_recorded_video">Add a Recorded Video</string>
    <string name="choose_a_batch_name">Choose a batch name</string>
    <string name="enter_the_video_title">Enter the video title</string>
    <string name="enter_the_youtube_video_id">Enter the youtube video id</string>
    <string name="add_video">Add Video</string>
    <string name="enter_the_recorded_date_dd_mm_yy">Enter the recorded date (dd/mm/yy)</string>
    <string name="search_videos_by_date_dd_mm_yy">Search Videos by date (dd/mm/yy)</string>
    <string name="edit_a_batch_details">Edit a Batch Details</string>
    <string name="save_changes">Save Changes</string>
    <string name="search_users_by_their_app_id">Search Users by their app id</string>
    <string name="class_link">Class Link</string>
    <string name="class_routine_link">Class Routine Drive Link</string>
    <string name="edit_details">Edit Details</string>
    <string name="delete_video">Delete Video</string>
    <string name="video_date">Video Date</string>
    <string name="video_title">Video Title</string>
    <string name="video_youtube_id">Video youtube id</string>
    <string name="send_mail">Send Mail</string>
    <string name="delete_a_batch">Delete a Batch</string>
    <string name="class_name">Class Name</string>
    <string name="you_can_add_class_name_and_join_class_link_accordingly_to_your_need_you_have_to_at_least_add_one_class_name_and_link_maximum_10_class_name_and_link">You can add class name and join class link accordingly to your need. You have to at least add one class name and link, maximum 10 class name and link.</string>
    <string name="please_select_a_batch">Please select a Batch</string>
    <string name="please_choose_a_class_to_join">Please choose a class to join</string>
    <string name="join_now">Join Now</string>
    <string name="edit_contact_us_info">Edit Contact Us Info</string>
    <string name="phone_number">Phone Number (e.g: 01xxxxxxxxx)</string>
    <string name="facebook_url">Facebook Url</string>
    <string name="website_url">Website Url</string>
    <string name="gmail">Gmail</string>
    <string name="edit_guest_user_registration_link">Edit Guest User Registration Link</string>
    <string name="edit_guest_registration_link">Edit Guest Registration Link</string>
    <string name="registration_link">Registration Link</string>
    <string name="done">Done</string>
    <string name="hey_guest_you_re_not_register_yet_as_a_student">Hey, Guest! You\'re not register yet as a student.</string>
    <string name="register_now">Register Now</string>
    <string name="notice_board">Notice Board</string>
    <string name="assign_student_s_mark">Assign Student\'s Mark</string>
    <string name="assign_student_mark">Assign Student Mark</string>
    <string name="enter_student_s_mark">Enter student mark</string>
    <string name="add_a_comment_or_suggestion">Add a comment or suggestion</string>
    <string name="assign">Assign</string>
    <string name="enter_subject_and_exam_name">Enter Subject and Exam Name</string>
    <string name="marks">Marks:</string>
    <string name="subject_name">Subject Name</string>
    <string name="mark">Mark</string>
    <string name="title">Title:</string>
    <string name="exam_title">Exam Title</string>
</resources>