<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AdminPanel.EditContactUsInfo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00008577"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/back"
            app:title="Edit Contact Us Info"
            app:titleTextColor="@color/comb_1" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/contact_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColor="@color/black"
            app:met_floatingLabel="normal" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/contact_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contact_phone"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:hint="@string/facebook_url"
            android:inputType="text"
            android:textColor="@color/black"
            app:met_floatingLabel="normal" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/contact_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contact_facebook"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:hint="@string/website_url"
            android:inputType="text"
            android:textColor="@color/black"
            app:met_floatingLabel="normal" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/contact_gmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contact_website"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:hint="@string/gmail"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            app:met_floatingLabel="normal" />

        <Button
            android:id="@+id/contact_save_changes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contact_gmail"
            android:layout_margin="50dp"
            android:background="@drawable/button_bg"
            android:fontFamily="monospace"
            android:padding="10dp"
            android:text="@string/save_changes"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </RelativeLayout>

</ScrollView>