<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AdminPanel.BatchSection.EditBatchVideoDetails">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00008577"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/back"
            app:title="Edit Recorded Video Details"
            app:titleTextColor="@color/comb_1" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/video_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_margin="20dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/video_title"
            android:inputType="text"
            android:textColor="@color/black"
            app:met_floatingLabel="normal" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/video_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/video_title"
            android:layout_margin="20dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/video_date"
            android:inputType="text"
            android:textColor="@color/black"
            app:met_floatingLabel="normal" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/video_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/video_date"
            android:layout_margin="20dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/video_youtube_id"
            android:inputType="text"
            android:textColor="@color/black"
            app:met_floatingLabel="normal" />

        <Button
            android:id="@+id/save_chng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/video_id"
            android:layout_margin="50dp"
            android:fontFamily="monospace"
            android:padding="10dp"
            android:text="@string/save_changes"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </RelativeLayout>

</ScrollView>