<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/admin_custom_layout"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:background="@color/white"
            android:fontFamily="serif"
            android:text="@string/edit_guest_registration_link"
            android:textAlignment="center"
            android:textColor="@color/comb_1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textSize="18sp">

            <EditText
                android:id="@+id/popupEditRegistrationLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/registration_link"
                android:inputType="text"
                android:textAlignment="center"
                android:textSize="18sp"
                tools:ignore="RtlCompat" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <Button
                android:id="@+id/popupEditRegistrationCancelButtonID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="5"
                android:background="@drawable/button_bg"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/popupEditRegistrationGoToID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="5"
                android:background="@drawable/button_bg"
                android:padding="10dp"
                android:text="@string/go_to"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_margin="20dp" />
    </LinearLayout>

</ScrollView>